# AIforBharat

./: .gitattributes  .gitignore
AIForall/Workshop2/Lazy_Automation/: pyproject.toml
AIForall/Workshop2/Lazy_Automation/config/: settings.json
AIForall/Workshop2/Lazy_Automation/data/: execution_records.json
AIForall/Workshop2/Lazy_Automation/src/: __init__.py  analytics_engine.py  backup_manager.py  communication_automation.py  config_manager.py  data_models.py  error_handler.py  export_service.py  file_automation.py  file_service.py  gradio_ui.py  productivity_automation.py  rules_engine.py  sandbox_executor.py  task_scheduler.py  trigger_manager.py  web_cloud_automation.py  workflow_chain.py
AIForall/Workshop2/Lazy_Automation/tests/: __init__.py  conftest.py  test_analytics_engine.py  test_backup_manager.py  test_communication_automation.py  test_config_manager.py  test_data_models.py  test_error_handler.py  test_export_service.py  test_file_automation.py  test_file_service.py  test_gradio_ui.py  test_integration_workflows.py  test_productivity_automation.py  test_rules_engine.py  test_sandbox_executor.py  test_task_scheduler.py  test_trigger_manager.py  test_web_cloud_automation.py  test_workflow_chain.py
AIForall/Workshop4/Building Intelligent AI agents with Amazon Bedrock and Strands/supply-chain-optimizer/: .env.example  .gitignore  AGENTS_AS_TOOLS.md  AGENTS_AS_TOOLS_ARCHITECTURE.txt  AGENTS_AS_TOOLS_QUICK_START.txt  AGENTS_AS_TOOLS_SUMMARY.md  AGENTS_AS_TOOLS_UPDATED.md  AWS_COMPLETE_PACKAGE.md  AWS_DEPLOYMENT_CHECKLIST.md  AWS_DEPLOYMENT_GUIDE.md  AWS_INDEX.md  AWS_SETUP_SUMMARY.md  AWS_TESTING_QUICK_START.md  AWS_TESTING_README.md  AWS_TESTING_RESOURCES.md  BEDROCK_KB_SETUP_GUIDE.md  BLOG_POST.md  COMPLETE_SETUP_GUIDE.md  COMPLETION_SUMMARY.txt  CUSTOM_DATA_UPLOAD_GUIDE.md  DELIVERY_SUMMARY.md  DEMO_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  HACK2SKILL_INDEX.md  HACK2SKILL_SUBMISSION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_OVERVIEW.md  IMPLEMENTATION_STATUS.md  KB_INTEGRATION_FIXES_SUMMARY.md  KB_INTEGRATION_QUICK_START.md  KB_SETUP_COMPLETE.md  KNOWLEDGE_BASE_INTEGRATION.md  MONITORING_IMPLEMENTATION.md  MONITORING_QUICK_START.md  PREPARE_YOUR_DATA.md  QUICK_REFERENCE.txt  QUICK_START_COMMANDS.txt  QUICK_START_UPDATED_TOOLS.md  README.md  README_LATEST.md  (+28 more)
AIForall/Workshop4/Building Intelligent AI agents with Amazon Bedrock and Strands/supply-chain-optimizer/tests/: test_agent_orchestration.py  test_agent_orchestrator.py  test_anomaly_detection_agent.py  test_api_endpoints.py  test_config.py  test_data_archival.py  test_inventory_optimizer_agent.py  test_orchestration.py  test_report_generation_agent.py  test_supplier_coordination_agent.py  (+1 more)
(+2681 files in other folders)
