[project]
name = "runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "strands-agents>=1.20.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv.workspace]
members = [
    "my-custom-agent",
]
